external/1/2/3/4/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: kubeflow
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - name: "4888"
      port: 4888
      protocol: TCP
      targetPort: 4888
