external/1/2/3/4/pgadmin/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pgadmin
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /pgadmin/
      headers:
        request:
          set:
            X-Script-Name: /pgadmin
      rewrite:
        uri: "/pgadmin/"
      route:
        - destination:
            host: pgadmin.kubeflow.svc.cluster.local
            port:
              number: 4888
